--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_database: ^7.2.1
   firebase_core: ^1.17.0
   firebase_auth: ^3.3.18
+  geolocator: ^8.2.1
 
 dev_dependencies:
   flutter_test:
