supervisor_page.dart added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_core: ^1.17.0
   firebase_auth: ^3.3.18
   geolocator: ^8.2.1
+  haversine: ^1.0.2
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
