--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   geolocator: ^8.2.1
   haversine: ^1.0.2
   shared_preferences: ^2.0.15
+  flutter_native_splash: ^2.1.6
 
 dev_dependencies:
   flutter_test:
